cluster/apps/networking/traefik/routers/old-traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: old-traefik
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`bazarr.${SECRET_OLD_DOMAIN}`)
      services:
        - name: old-traefik
          port: 443
    - match: HostSNI(`jackett.${SECRET_OLD_DOMAIN}`)
      services:
        - name: old-traefik
          port: 443
    - match: HostSNI(`nzbhydra.${SECRET_OLD_DOMAIN}`)
      services:
        - name: old-traefik
          port: 443
    - match: HostSNI(`organizr.${SECRET_OLD_DOMAIN}`)
      services:
        - name: old-traefik
          port: 443
    - match: HostSNI(`plexrequests.${SECRET_OLD_DOMAIN}`)
      services:
        - name: old-traefik
          port: 443
    - match: HostSNI(`portainer.${SECRET_OLD_DOMAIN}`)
      services:
        - name: old-traefik
          port: 443
    - match: HostSNI(`radarr.${SECRET_OLD_DOMAIN}`)
      services:
        - name: old-traefik
          port: 443
    - match: HostSNI(`sabnzbd.${SECRET_OLD_DOMAIN}`)
      services:
        - name: old-traefik
          port: 443
    - match: HostSNI(`sonarr.${SECRET_OLD_DOMAIN}`)
      services:
        - name: old-traefik
          port: 443
    - match: HostSNI(`tautulli.${SECRET_OLD_DOMAIN}`)
      services:
        - name: old-traefik
          port: 443
    - match: HostSNI(`homeassistant.${SECRET_OLD_DOMAIN}`)
      services:
        - name: old-traefik
          port: 443
    - match: HostSNI(`octoprint.${SECRET_OLD_DOMAIN}`)
      services:
        - name: old-traefik
          port: 443
    - match: HostSNI(`plex.${SECRET_OLD_DOMAIN}`)
      services:
        - name: old-traefik
          port: 443
    - match: HostSNI(`qbittorrent.${SECRET_OLD_DOMAIN}`)
      services:
        - name: old-traefik
          port: 443
  tls:
    passthrough: true
